--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +9,7 @@
   box-sizing: border-box;
 }
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "open sans", sans-serif;
   color: white;
 }
 
@@ -20,7 +20,12 @@ textarea {
   border: 1px solid #dadada;
   border-radius: 5px;
   padding: 10px;
-  // margin: 10px;
+  width: 30%;
+  margin: 5px;
+  box-sizing: border-box;
+}
+label{
+  color: #000;
 }
 
 input[type="text"]:focus,
