--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,16 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 * {
   margin: 0;
   padding: 0;
 }
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
+
 body {
   font-family: "open sans", sans-serif;
   color: white;
+}
+
+$base-color: #5b43d6;
+$dark-pink: #da4567;
+
+form {
+  width: 50%;
+}
+
+label {
+  color: #000;
 }
 
 input[type="text"],
@@ -18,36 +25,29 @@ input[type="email"],
 textarea {
   background: #fff;
   border: 1px solid #dadada;
-  border-radius: 5px;
-  padding: 10px;
-  width: 30%;
-  margin: 5px;
-  box-sizing: border-box;
-}
-label{
-  color: #000;
+  border-radius: 0.2em;
+  width: 100%;
+  padding: 1em;
+  margin: 0.5em 0;
 }
 
 input[type="text"]:focus,
 input[type="email"]:focus,
 textarea:focus {
   background-color: #fff;
-  border-color: #5b43d6;
+  border-color: $base-color;
   outline: 0;
-  box-shadow: 0 0 0 1px #5b43d6;
 }
 
-// label {
-//   display: inline;
-// }
-
 button {
+  display: block;
   color: #fff;
-  background-color: #5b43d6;
-  width: 25%;
-  padding: 10px;
-  border-radius: 25px;
-  justify-self: center;
+  font-size: 1em;
+  background-color: $base-color;
+  width: 23%;
+  padding: 0.5em;
+  border-radius: 1em;
+  margin: auto;
 }
 // scroll-bar styling
 body::-webkit-scrollbar {
@@ -64,6 +64,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 // svg styling
-svg:hover{
-  fill: #DA4567;
+svg:hover {
+  fill: $dark-pink;
 }
