--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,27 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 @import "classes";
 @import "layout.scss";
+@import "card.scss";
 
-// Universal Box Sizing with Inheritance
-html {
+$base-color: #5b43d6;
+$dark-pink: #da4567;
+
+* {
   box-sizing: border-box;
-}
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
   padding: 0px;
   margin: 0px;
 }
 
 body {
   font-family: "open sans", sans-serif;
-  box-sizing: border-box;
   color: white;
 }
-
-$base-color: #5b43d6;
-$dark-pink: #da4567;
 
 form {
   padding: 1em;
@@ -53,12 +47,8 @@ textarea {
   margin: 0.5em 0;
 }
 
-textarea:invalid {
-  border: 2px dashed red;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
+input:focus,
+input:focus,
 textarea:focus {
   background-color: #fff;
   border-color: $base-color;
@@ -70,26 +60,20 @@ button {
   color: #fff;
   font-size: 1em;
   background-color: $base-color;
-  padding: 0.75em 1.7em;
+  padding: 0.75em 1.5em;
   border-radius: 2em;
   cursor: pointer;
   border: none;
 }
-// scroll-bar styling
-body::-webkit-scrollbar {
-  width: 0.8em;
-}
 
-body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(26, 3, 65, 0.3);
-}
-
-body::-webkit-scrollbar-thumb {
+button:hover {
+  color: #000;
   background-color: #57adf5;
-  outline: 1px solid #2e00b3;
+  transition: background-color 2s ease-out;
 }
 
 // svg styling
 svg:hover {
   fill: $dark-pink;
+  transition: fill 1s ease-out;
 }
