--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,19 +1,21 @@
 .nav {
   padding: 25px;
   display: flex;
+  // position: fixed;
   background-color: #5b43d6;
   justify-content: space-around;
   align-items: center;
   letter-spacing: 2px;
 }
-nav ul {
+.nav-links {
   display: flex;
   justify-content: space-around;
   width: 30%;
-  & li {
-    list-style: none;
-    font-weight: 700;
-  }
+}
+
+.nav-links li {
+  list-style: none;
+  font-weight: 700;
 }
 
 .burger {
@@ -26,20 +28,7 @@ nav ul {
   }
 }
 
-@media only screen and (max-width: 600px) {
-  nav ul {
-    position: absolute;
-    height: 92vh;
-    top: 8vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 40%;
-    height: 15%;
-    right: 0;
-  }
-  .burger {
-    display: block;
-  }
+.slide {
+  transform: translateX(0%);
+  transition: transform 1s ease;
 }
