--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,22 +1,30 @@
 .card-container {
-    // style={{
-    //     display: "flex",
-    //     justifyContent: "center",
-    //     alignItems: "center",
-    //   }}
-      display:flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
+  background: #5b43d6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .card {
   width: 200px;
   height: 200px;
-  padding: 1em;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-transform: capitalize;
+  flex-direction: column;
+  margin: 5em 1em;
+}
+svg {
+  width: 128px;
+  height: 128px;
+  display: block;
+  margin: auto;
 }
 
-
+@media only screen and (max-width: 700px) {
+  .card-container {
+    flex-direction: column;
+  }
+}
