--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 @import "classes";
 @import "layout.scss";
 @import "card.scss";
+@import "transitions.scss";
+@import "description.scss";
 
 $base-color: #5b43d6;
 $dark-pink: #da4567;
@@ -13,7 +15,7 @@ $dark-pink: #da4567;
 }
 
 body {
-  font-family: "open sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: white;
 }
 
