--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,7 +1,10 @@
 .nav {
   padding: 25px;
   display: flex;
-  // position: fixed;
+  position: fixed; /* Set the navbar to fixed position */
+  width: 100%;
+  height: 10vh;
+  top: 0;
   background-color: #5b43d6;
   justify-content: space-around;
   align-items: center;
@@ -31,4 +34,12 @@
 .slide {
   transform: translateX(0%);
   transition: transform 1s ease;
+
+  width: 100%;
+  // background-color: red;
+  position: absolute;
+  height: 266px;
+  // height: 283%;
+  // display: flex;
+  top: 10vh;
 }
