change icon styling

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,5 +1,5 @@
 .card-container {
-  background: #5b43d6;
+  background: #577EF5;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,7 @@
   flex-direction: column;
   margin: 5em 1em;
 }
-svg {
+.card svg {
   width: 128px;
   height: 128px;
   display: block;
