--- a/src/styles/_description.scss
+++ b/src/styles/_description.scss
@@ -1,6 +1,7 @@
 .description-container {
   background-color: #5b43d6;
   background-image: linear-gradient(180deg, #575ff5, #5b43d6);
+  // background-image: url("../components/svgs/capture.jpg");
   display: flex;
   margin-top: 10vh;
   justify-content: center;
