--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -37,6 +37,10 @@
   .description {
     gap: 18px !important;
   }
+  .card{
+    margin: 2em 1em !important;
+    width: 100% !important;
+  }
 }
 
 @media only screen and (min-width: 700px) and (max-width: 1000px) {
