--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 @import "classes";
 @import "layout.scss";
 @import "card.scss";
 @import "transitions.scss";
 @import "description.scss";
+@import "footer.scss";
 
 $base-color: #5b43d6;
 $dark-pink: #da4567;
@@ -16,6 +17,7 @@ $dark-pink: #da4567;
 
 body {
   font-family: "Roboto", sans-serif;
+  font-size: larger;
   color: white;
 }
 
@@ -65,6 +67,7 @@ button {
   padding: 0.75em 1.5em;
   border-radius: 2em;
   cursor: pointer;
+  margin: 0 auto;
   border: none;
 }
 
@@ -76,6 +79,6 @@ button:hover {
 
 // svg styling
 svg:hover {
-  fill: $dark-pink;
+  fill: $dark-pink !important;
   transition: fill 1s ease-out;
 }
