remove un-necessary packages

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,4 +1,5 @@
-.footer{
-    display: flex;
-    justify-content: center;
+.footer {
+  @include displayFlex(row, center);
+//   display: flex;
+//   justify-content: center;
 }
