--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
+@import "mixins.scss";
+@import "navbar.scss";
 @import "classes";
 @import "layout.scss";
 @import "card.scss";
