--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,6 +7,7 @@
 @import "transitions.scss";
 @import "description.scss";
 @import "footer.scss";
+@import "contact.scss";
 
 $base-color: #5b43d6;
 $dark-pink: #da4567;
