separate navbar styling

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,3 +1,51 @@
-input{
-  margin: .5em 0;
+input {
+  margin: 0.5em 0;
+}
+
+.contact-div h1 {
+  color: #000;
+  text-align: center;
+  margin-top: 1em;
+}
+
+input {
+  border: 1px solid #dadada;
+  border-radius: 0.2em;
+  padding: 1em;
+  width: 100%;
+}
+
+textarea {
+  border: 1px solid #dadada;
+  border-radius: 0.2em;
+  resize: vertical;
+  padding: 1em;
+  width: 100%;
+  margin: 0.5em 0;
+}
+
+input:focus,
+input:focus,
+textarea:focus {
+  background-color: #fff;
+  border-color: #5b43d6;
+  outline: 0;
+}
+
+.alert {
+  color: black;
+  display: flex;
+  justify-content: flex-end;
+  & span {
+    width: max-content;
+    padding: 0.1em;
+    background-color: #5b43d6;
+    color: white;
+    display: none;
+  }
+}
+
+img {
+  display: block;
+  margin: auto;
 }
