--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -25,7 +25,7 @@
     background-color: #5b43d6;
     flex-direction: column;
     align-items: center;
-    width: 100% !important; //to overside initial nav-links width of 30%
+    width: 100% !important; //to override initial nav-links width of 30%
     height: 25%;
     transform: translateX(100%);
     box-shadow: 0 13px 15px #00000029;
