change color scheme a bit

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,5 +1,5 @@
 .card-container {
-  background: #577EF5;
+  background: #3E6CF4;
   display: flex;
   justify-content: center;
   align-items: center;
