--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 10vh;
   top: 0;
-  background-color: #5b43d6;
+  background-color: #0A33AE;
   justify-content: space-around;
   align-items: center;
   letter-spacing: 2px;
