--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -41,6 +41,13 @@
     margin: 2em 1em !important;
     width: 100% !important;
   }
+  .project-container {
+    flex-direction: column;
+  }
+  #chat_svg {
+    height: 156px;
+    width: 156px;
+  }
 }
 
 @media only screen and (min-width: 701px) and (max-width: 1000px) {
