--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -1,20 +1,25 @@
 .project-container {
   display: flex;
-  color: #fff;
+  color: #000;
   justify-content: center;
   align-items: center;
-  background-color: #137FE4;
-  // background-image: linear-gradient(180deg, #575ff5, #5b43d6);
+  background-color: #7898F7;
+  // padding: 4% 0;
+  & a {
+    text-decoration: none;
+  }
 }
 .svg-container {
   flex-basis: 100%;
   text-align: center;
   flex-grow: 1;
-  // border: 1px solid black;
+  padding: 4%;
 }
 .desc-container {
-  margin: 1em;
   text-align: center;
   flex-basis: 100%;
-  // border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 4%;
 }
