--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,30 +1,41 @@
 .card-container {
-  background: #3E6CF4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+    background: #3e6cf4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .card {
-  width: 200px;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-transform: capitalize;
-  flex-direction: column;
-  margin: 5em 1em;
+    width: 200px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: capitalize;
+    flex-direction: column;
+    margin: 5em 1em;
 }
 .card svg {
-  width: 128px;
-  height: 128px;
-  display: block;
-  margin: auto;
+    width: 128px;
+    height: 128px;
+    display: block;
+    margin: auto;
+}
+
+.card > div {
+    width: 100%;
+    aspect-ratio: 1;
+}
+
+.card > div:hover {
+    transform: scale(1.1);
+    width: 220px;
+    aspect-ratio: 1;
 }
 
 @media only screen and (max-width: 700px) {
-  .card-container {
-    flex-direction: column;
-  }
+    .card-container {
+        flex-direction: column;
+    }
 }
