add asteroid info section

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,6 +9,7 @@
 @import "footer.scss";
 @import "contact.scss";
 @import "project.scss";
+@import "asteroid.scss";
 
 $base-color: #0A33AE;
 $dark-pink: #da4567;
