change aspect ratio

--- a/src/styles/_asteroid.scss
+++ b/src/styles/_asteroid.scss
@@ -8,7 +8,7 @@
     }
     & img {
         width: 35vw;
-        aspect-ratio: 1;
+        aspect-ratio: auto;
         border-radius: 0.5em;
         margin: unset;
     }
