--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -55,7 +55,7 @@
     padding: 2em;
     & img {
         width: 100%;
-        aspect-ratio: 1;
+        aspect-ratio: auto;
         border-radius: 0.5em;
     }
     & p {
